[package]
name = "rsplay"
version = "0.1.0"
authors = [ "Taisuke Miyazaki <imishinist@gmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
clap = "2.33.1"
env_logger = "0.7.1"
futures = "0.3.5"
humantime-serde = "1.0.0"
log = "0.4.8"
reqwest = { version = "0.10.6", features = [ "json" ] }
serde = { version = "1.0.110", features = [ "derive" ] }
serde_yaml = "0.8.12"
tokio = { version = "0.2.21", features = [ "full" ] }
spmc = "0.3.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "postmerge-hook", "run-cargo-test", "run-cargo-fmt", "run-cargo-check", "run-cargo-clippy"]
